fix overflow for safari

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,8 @@ body {
   line-height: 1.6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
 html,
